--- a/articles/load-balancer/TOC.yml
+++ b/articles/load-balancer/TOC.yml
@@ -69,8 +69,10 @@
       href: load-balancer-tcp-reset.md
     - name: Standard Load Balancer と可用性ゾーン
       href: load-balancer-standard-availability-zones.md
-    - name: 組み込みのセキュリティ制御
-      href: load-balancer-security-controls.md
+    - name: セキュリティ
+      items:
+        - name: セキュリティ ベースライン
+          href: security-baseline.md
     - name: バックエンド プールの管理
       href: backend-pool-management.md
     - name: Standard Load Balancer と Virtual Machine Scale Sets
