--- a/articles/service-fabric/index.yml
+++ b/articles/service-fabric/index.yml
@@ -6,14 +6,38 @@ metadata:
   ms.topic: landing-page
   author: erikadoyle
   ms.author: edoyle
-  ms.date: 12/04/2019
-  ms.openlocfilehash: a2651387a425439d09ad68b0e763ff0c6c3f7f27
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.date: 07/31/2020
+  ms.openlocfilehash: 9bce6570cef2703bf1ad63d92c55bb3794927a8b
+  ms.sourcegitcommit: b48e8a62a63a6ea99812e0a2279b83102e082b61
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "75452220"
+  ms.lasthandoff: 09/28/2020
+  ms.locfileid: "91408703"
 landingContent:
+- title: Service Fabric の管理対象クラスターを試す (プレビュー)
+  linkLists:
+  - linkListType: get-started
+    links:
+    - text: Service Fabric の管理対象クラスターとは (プレビュー)
+      url: overview-managed-cluster.md
+    - text: 管理対象クラスターをデプロイする (プレビュー)
+      url: quickstart-managed-cluster-template.md
+  - linkListType: tutorial
+    links:
+    - text: 管理対象クラスターを作成する (プレビュー)
+      url: tutorial-managed-cluster-deploy.md
+    - text: 管理対象クラスター ノードの種類をスケールアウトする (プレビュー)
+      url: tutorial-managed-cluster-scale.md
+    - text: 管理対象クラスター ノードの種類を追加および削除する (プレビュー)
+      url: tutorial-managed-cluster-add-remove-node-type.md
+    - text: 管理対象クラスターにアプリをデプロイする (プレビュー)
+      url: tutorial-managed-cluster-deploy-app.md
+    - text: 管理対象クラスター ノードの種類に VM スケールセット拡張機能を追加する (プレビュー)
+      url: how-to-managed-cluster-vmss-extension.md
+  - linkListType: whats-new
+    links:
+    - text: Service Fabric の管理対象クラスターの FAQ
+      url: faq-managed-cluster.md
 - title: Service Fabric について
   linkLists:
   - linkListType: overview
@@ -138,7 +162,7 @@ landingContent:
       url: samples-cli.md
   - linkListType: whats-new
     links:
-    - text: Service Fabric に関してよく寄せられる質問
+    - text: Service Fabric の FAQ
       url: service-fabric-common-questions.md
 - title: オンプレミスで Service Fabric を使用する
   linkLists:
