--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -4,6 +4,8 @@
   items:
     - name: AKS について
       href: intro-kubernetes.md
+    - name: ソリューションのアーキテクチャ
+      href: /azure/architecture/reference-architectures/containers/aks-start-here?bc=%2fazure%2faks%2fbreadcrumb%2ftoc.json&toc=%2fazure%2faks%2ftoc.json
 - name: クイックスタート
   expanded: true
   items:
@@ -250,7 +252,7 @@
           href: control-kubeconfig-access.md
         - name: ネットワーク ポリシーによるポッドのトラフィックのセキュリティ保護
           href: use-network-policies.md
-        - name: Azure Policy を使用したポッドのセキュリティ保護 (プレビュー)
+        - name: Azure Policy を使用したポッドのセキュリティ保護
           href: use-pod-security-on-azure-policy.md
         - name: ポッド セキュリティ ポリシーの使用 (プレビュー)
           href: use-pod-security-policies.md
