--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -162,8 +162,6 @@
       items:
         - name: インデクサーの操作
           items:
-            - name: インデクサーを構成する
-              href: search-indexer-overview.md
             - name: インデクサーの監視
               href: search-howto-monitor-indexers.md
             - name: インデクサーのスケジュール設定
@@ -188,8 +186,12 @@
               href: search-blob-ai-integration.md
             - name: BLOB インデクサーを構成する
               href: search-howto-indexing-azure-blob-storage.md
+            - name: 変更および削除された BLOB のインデックス作成
+              href: search-howto-index-changed-deleted-blobs.md
             - name: 一対多の BLOB のインデックス作成
               href: search-howto-index-one-to-many-blobs.md
+            - name: プレーンテキストのインデックス作成
+              href: search-howto-index-plaintext-blobs.md
             - name: CSV BLOB のインデックス作成
               href: search-howto-index-csv-blobs.md
             - name: JSON BLOB のインデックス作成
