commit translated contents

--- a/articles/azure-netapp-files/index.yml
+++ b/articles/azure-netapp-files/index.yml
@@ -8,13 +8,13 @@ metadata:
   ms.topic: landing-page
   author: b-juche
   ms.author: b-juche
-  ms.date: 03/11/2020
-  ms.openlocfilehash: bcca681fcae02df3e3521b48f710acd36127c882
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.date: 08/25/2020
+  ms.openlocfilehash: f44cd7bc6269a7efbaaaaf2788f660363bafcbac
+  ms.sourcegitcommit: f796e1b7b46eb9a9b5c104348a673ad41422ea97
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "79369054"
+  ms.lasthandoff: 09/30/2020
+  ms.locfileid: "91567844"
 landingContent:
 - title: Azure NetApp Files について
   linkLists:
@@ -22,6 +22,8 @@ landingContent:
     links:
     - text: Azure NetApp Files とは
       url: azure-netapp-files-introduction.md
+    - text: 新機能
+      url: whats-new.md
     - text: ストレージ階層の理解
       url: azure-netapp-files-understand-storage-hierarchy.md
   - linkListType: concept
@@ -36,7 +38,7 @@ landingContent:
     links:
     - text: Azure NetApp Files のビデオ
       url: azure-netapp-files-videos.md
-- title: はじめに
+- title: 作業開始
   linkLists:
   - linkListType: how-to-guide
     links:
