--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -196,6 +196,8 @@
               href: search-howto-index-csv-blobs.md
             - name: JSON BLOB のインデックス作成
               href: search-howto-index-json-blobs.md
+            - name: 暗号化された BLOB にインデックスを付ける
+              href: search-howto-index-encrypted-blobs.md
         - name: Azure テーブル
           href: search-howto-indexing-azure-tables.md
         - name: Azure Cosmos DB
@@ -401,7 +403,7 @@
 - name: リファレンス
   items:
     - name: Azure CLI
-      href: /cli/azure/search?view=azure-cli-latest
+      href: /cli/azure/search
     - name: Azure PowerShell
       href: /powershell/module/az.search
     - name: Resource Manager テンプレート
